--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "expo": "^51.0.18",
     "expo-screen-orientation": "^6.4.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
