--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "^51.0.18",
-    "expo-screen-orientation": "^6.4.1",
-    "expo-status-bar": "~1.11.1",
+    "expo-screen-orientation": "^7.0.5",
+    "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "^0.74.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
