--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo-screen-orientation": "^7.0.5",
     "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "^0.74.3"
+    "react-native": "^0.74.3",
+    "react-native-restart": "^0.0.27"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
