--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "expo-screen-orientation": "^7.0.5",
     "expo-status-bar": "^1.12.1",
     "react": "18.2.0",
-    "react-native": "^0.74.3",
-    "react-native-exit-app": "^2.0.0"
+    "react-native": "^0.74.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
